<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_house"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="carlosdeveloper.com.musicalstructure.houseActivity">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/linearStyle">

                <TextView
                    android:id="@+id/tv_main_info"
                    android:text="@string/info_top_10"
                    style="@style/CategoryStyle"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/linearStyle">

                <ImageView
                    style="@style/DeepImStyle" />

                <TextView
                    android:id="@+id/tv_house_pos1"
                    android:text="@string/house_1"
                    style="@style/CategoryStyle"
                    android:layout_height="50dp" />
            </LinearLayout>

            <LinearLayout
                style="@style/linearStyle">

                <ImageView
                    style="@style/DeepImStyle" />

                <TextView
                    android:id="@+id/tv_house_pos2"
                    android:text="@string/house_2"
                    style="@style/CategoryStyle"
                    android:layout_height="50dp" />
            </LinearLayout>

            <LinearLayout
                style="@style/linearStyle">

                <ImageView
                    style="@style/DeepImStyle" />

                <TextView
                    android:id="@+id/tv_house_pos3"
                    android:text="@string/house_3"
                    style="@style/CategoryStyle"
                    android:layout_height="50dp" />

            </LinearLayout>

            <LinearLayout
                style="@style/linearStyle">

                <ImageView
                    style="@style/DeepImStyle" />
                <TextView
                    android:id="@+id/tv_house_pos4"
                    android:text="@string/house_4"
                    style="@style/CategoryStyle"
                    android:layout_height="50dp" />

            </LinearLayout>

            <LinearLayout
                style="@style/linearStyle">

                <ImageView
                    style="@style/DeepImStyle" />

                <TextView
                    android:id="@+id/tv_house_pos5"
                    android:text="@string/house_5"
                    style="@style/CategoryStyle"
                    android:layout_height="50dp" />

            </LinearLayout>

            <LinearLayout
                style="@style/linearStyle">

                <ImageView
                    style="@style/DeepImStyle" />

                <TextView
                    android:id="@+id/tv_house_pos6"
                    android:text="@string/house_6"
                    style="@style/CategoryStyle"
                    android:layout_height="50dp" />
            </LinearLayout>

            <LinearLayout
                style="@style/linearStyle">

                <ImageView
                    style="@style/DeepImStyle" />

                <TextView
                    android:id="@+id/tv_house_pos7"
                    android:text="@string/house_7"
                    style="@style/CategoryStyle"
                    android:layout_height="50dp" />
            </LinearLayout>

            <LinearLayout
                style="@style/linearStyle">

                <ImageView
                    style="@style/DeepImStyle" />

                <TextView
                    android:id="@+id/tv_house_pos8"
                    android:text="@string/house_8"
                    style="@style/CategoryStyle"
                    android:layout_height="50dp" />

            </LinearLayout>

            <LinearLayout
                style="@style/linearStyle">

                <ImageView
                    style="@style/DeepImStyle" />
                <TextView
                    android:id="@+id/tv_house_pos9"
                    android:text="@string/house_9"
                    style="@style/CategoryStyle"
                    android:layout_height="50dp" />

            </LinearLayout>

            <LinearLayout
                style="@style/linearStyle">

                <ImageView
                   style="@style/DeepImStyle" />

                <TextView
                    android:id="@+id/tv_house_pos10"
                    android:text="@string/house_10"
                    style="@style/CategoryStyle"
                    android:layout_height="50dp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
