<?xml version="1.0" encoding="utf-8"?>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_latin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:context="carlosdeveloper.com.musicalstructure.latinActivity">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical">

              <LinearLayout
                  style="@style/linearStyle">

                  <TextView
                      android:id="@+id/tv_main_info"
                      android:text="@string/info_top_10"
                      style="@style/CategoryStyle"
                      android:layout_height="wrap_content" />

              </LinearLayout>

              <LinearLayout
                  style="@style/linearStyle">

                  <ImageView
                      style="@style/LatinImStyle"/>

                  <TextView
                      android:id="@+id/tv_latin_pos1"
                      android:text="@string/latin_1"
                      style="@style/CategoryStyle"
                      android:layout_height="50dp" />
              </LinearLayout>

              <LinearLayout
                  style="@style/linearStyle">

                  <ImageView
                      style="@style/LatinImStyle"/>

                  <TextView
                      android:id="@+id/tv_latin_pos2"
                      android:text="@string/latin_2"
                      style="@style/CategoryStyle"
                      android:layout_height="50dp" />
              </LinearLayout>

              <LinearLayout
                  style="@style/linearStyle">

                  <ImageView
                      style="@style/LatinImStyle"/>

                  <TextView
                      android:id="@+id/tv_latin_pos3"
                      android:text="@string/latin_3"
                      style="@style/CategoryStyle"
                      android:layout_height="50dp" />

              </LinearLayout>

              <LinearLayout
                  style="@style/linearStyle">

                  <ImageView
                      style="@style/LatinImStyle"/>
                  <TextView
                      android:id="@+id/tv_latin_pos4"
                      android:text="@string/latin_4"
                      style="@style/CategoryStyle"
                      android:layout_height="50dp" />

              </LinearLayout>

              <LinearLayout
                  style="@style/linearStyle">

                  <ImageView
                      style="@style/LatinImStyle"/>

                  <TextView
                      android:id="@+id/tv_latin_pos5"
                      android:text="@string/latin_5"
                      style="@style/CategoryStyle"
                      android:layout_height="50dp" />

              </LinearLayout>

              <LinearLayout
                  style="@style/linearStyle">

                  <ImageView
                      style="@style/LatinImStyle"/>

                  <TextView
                      android:id="@+id/tv_latin_pos6"
                      android:text="@string/latin_6"
                      style="@style/CategoryStyle"
                      android:layout_height="50dp" />
              </LinearLayout>

              <LinearLayout
                  style="@style/linearStyle">

                  <ImageView
                      style="@style/LatinImStyle"/>

                  <TextView
                      android:id="@+id/tv_latin_pos7"
                      android:text="@string/latin_7"
                      style="@style/CategoryStyle"
                      android:layout_height="50dp" />
              </LinearLayout>

              <LinearLayout
                  style="@style/linearStyle">

                  <ImageView
                      style="@style/LatinImStyle"/>

                  <TextView
                      android:id="@+id/tv_latin_pos8"
                      android:text="@string/latin_8"
                      style="@style/CategoryStyle"
                      android:layout_height="50dp" />

              </LinearLayout>

              <LinearLayout
                  style="@style/linearStyle">

                  <ImageView
                      style="@style/LatinImStyle"/>
                  <TextView
                      android:id="@+id/tv_latin_pos9"
                      android:text="@string/latin_9"
                      style="@style/CategoryStyle"
                      android:layout_height="50dp" />

              </LinearLayout>

              <LinearLayout
                  style="@style/linearStyle">

                  <ImageView
                      style="@style/LatinImStyle"/>

                  <TextView
                      android:id="@+id/tv_latin_pos10"
                      android:text="@string/latin_10"
                      style="@style/CategoryStyle"
                      android:layout_height="50dp" />

              </LinearLayout>

               </LinearLayout>

           </android.support.v4.widget.NestedScrollView>

    </LinearLayout>
